# OpenGL_Study_past

./: CMakeLists.txt  Study  imgui.ini
lib/: docs.gl.html
res/shaders/: Basic.shader
src/: Application.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/tests/: TestClearColor.cpp  TestClearColor.h
